--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,25 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for MultiTac - Real-time Tic-Tac-Toe Game",
   "type": "module",
-  "main": "index.js",
+  "main": "src/index.js",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "echo 'No build step required for backend'"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "tic-tac-toe",
+    "socket.io",
+    "real-time",
+    "multiplayer",
+    "mern"
+  ],
+  "author": "Vivek Sharma",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
